modulus and decimal buttons

--- a/v_DarkKnight/HTML/index.html
+++ b/v_DarkKnight/HTML/index.html
@@ -22,6 +22,9 @@
                     &larr;
                 </button>
                 <button class="row-button">
+                    &percnt;
+                </button>
+                <button class="row-button">
                     &div;
                 </button>
             </div>
@@ -68,8 +71,11 @@
                 </button>
             </div>
             <div class="calc-button-row">
-                <button class="row-button triple">
+                <button class="row-button double">
                     0
+                </button>
+                <button class="row-button">
+                    .
                 </button>
                 <button class="row-button">
                     &equals;
