--- a/v_DarkKnight/HTML/index.html
+++ b/v_DarkKnight/HTML/index.html
@@ -15,7 +15,7 @@
 
         <section class="calc-buttons">
             <div class="calc-button-row">
-                <button class="row-button double">
+                <button class="row-button">
                     C
                 </button>
                 <button class="row-button">
